CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(smartPointer C CXX)

ADD_COMPILE_OPTIONS(-std=gnu++11)

SET(ROOT_PATH ${CMAKE_CURRENT_LIST_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROOT_PATH}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ROOT_PATH}/lib)

AUX_SOURCE_DIRECTORY(. SRC_LIST)
#SET(SRC_LIST smartPointer.h)
ADD_EXECUTABLE(smartPointer ${SRC_LIST})
#ADD_LIBRARY(smartPointer STATIC ${SRC_LIST})

